--- a/RfidPanel/MainWindow.xaml
+++ b/RfidPanel/MainWindow.xaml
@@ -5,8 +5,10 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:RfidPanel"
         mc:Ignorable="d"
-        Title="Панель управления" Height="500" Width="700"
-        MinHeight="500" MinWidth="700" Closing="WindowClosing">
+        Title="Панель управления"
+        Height="560" Width="700"
+        MinHeight="560" MinWidth="700"
+        Closing="WindowClosing">
     <Grid Margin="10">
         <Grid.RowDefinitions>
             <RowDefinition Height="auto"></RowDefinition>
@@ -31,7 +33,7 @@
                 <ColumnDefinition Width="*"></ColumnDefinition>
             </Grid.ColumnDefinitions>
             
-            <Grid Grid.Column="0">
+            <Grid Grid.Column="0" Margin="0,0,5,0">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="auto"></RowDefinition>
                     <RowDefinition Height="*"></RowDefinition>
@@ -49,10 +51,10 @@
                     <Label Content="История отметок" FontSize="18" HorizontalAlignment="Center" />
                 </StackPanel>
 
-                <ListBox x:Name="History" Grid.Row="1" HorizontalContentAlignment="Center" />
+                <ListBox x:Name="History" Grid.Row="1" FontSize="16" HorizontalContentAlignment="Center" />
             </Grid>
-            
-            <Image Grid.Column="1" x:Name="Photo" />
+
+            <Image Grid.Column="1" x:Name="Photo"  Margin="5,0,0,0" />
         </Grid>
 
         <Grid Grid.Row="2" Margin="0,0,0,10">
